--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <script src="./js/script.js"></script>
 </head>
 <body>
-    <button onclick="clicado()">CLIQUE AQUI</button>
+    <section class="calc_simples">
+        <div class="visor">
+            <input value="0" id="resultado" readonly type="text">
+        </div>
+        <div class="tecla">
+        <button>9</button>
+        <button>8</button>
+        <button>7</button>
+        <button>÷</button>
+        <button>6</button>
+        <button>5</button>
+        <button>4</button>
+        <button>×</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>-</button>
+        <button>0</button>
+        <button>.</button>
+        <button>+</button>
+        <button>=</button>
+        </div>
+    </section>
 </body>
 </html>
