--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
             <input value="0" id="resultado" readonly type="text">
         </div>
         <div class="tecla">
+        <button onclick="">ON</button>
+        <button onclick="">C</button>
+        <button onclick="">%</button>
+        <button onclick="">√</button>
+
         <button onclick="digitando('7')">7</button>
         <button onclick="digitando('8')">8</button>
         <button onclick="digitando('9')">9</button>
-        <button onclick="digitando('')">÷</button>
+        <button onclick="operacao('div')">÷</button>
         <button onclick="digitando('4')">4</button>
         <button onclick="digitando('5')">5</button>
         <button onclick="digitando('6')">6</button>
-        <button onclick="digitando('')">×</button>
-        <button onclick="digitando('1')">1</button>
-        <button onclick="digitando('2')">2</button>
+        <button onclick="operacao('mult')">×</button>
         <button onclick="digitando('3')">3</button>
-        <button onclick="digitando('')">-</button>
+        <button onclick="digitando('2')">2</button>
+        <button onclick="digitando('1')">1</button>
+        <button onclick="operacao('sub')">-</button>
         <button onclick="digitando('.')">.</button>
         <button onclick="digitando('0')">0</button>
-        <button onclick="digitando('')">+</button>
-        <button onclick="digitando('')">=</button>
+        <button onclick="operacao('soma')">+</button>
+        <button onclick="calcula()" id="igual">=</button>
         </div>
     </section>
 </body>
