--- a/minha_lista.html
+++ b/minha_lista.html
@@ -13,6 +13,10 @@
     </div>
     <div class="btn">
         <button onclick="inserir_ultimo()">Inserir Ultimo</button><br>
+        <button onclick="limpar_lista()">Limpar Lista</button><br>
+        <button onclick="ordenar_az()">Ordenar de A a Z</button><br>
+        <button onclick="ordenar_za()">Ordenar de Z a A</button><br>
+        <button onclick="deletar_nome()">Apagar Nome</button><br>
 
         <br>
         <span id="error"></span>
